--- a/index.html
+++ b/index.html
@@ -8,5 +8,13 @@
   </head>
   <body>
     <!-- Your code here -->
+    <img src="https://i.imgur.com/H1qsYEl.png"> 
+    <img
+  src="../images/my_company_logo.png"
+  alt="my company name">
+  <img
+  src="../images/my_company_logo.png"
+  alt="my company name"title="We're here to help you!"
+/>
   </body>
 </html>
